--- a/Desktop/form.yml
+++ b/Desktop/form.yml
@@ -4,8 +4,10 @@ form:
   - global_queue
   - global_hours
   - global_gpus
+  - global_email
   - cluster
   - desktop
+
 attributes:
   cluster: "rccs-cloud"
   desktop: "xfce"
