--- a/WHEEL/manifest.yml
+++ b/WHEEL/manifest.yml
@@ -1,5 +1,5 @@
 ---
-name: 2WHEEL Workflow Management Tool
+name: WHEEL Workflow Management Tool
 category: Interactive Apps
 role: batch_connect
 subcategory: Servers
