--- a/misc/update/global_bc_items.yml
+++ b/misc/update/global_bc_items.yml
@@ -9,18 +9,19 @@ global_bc_form_items:
       - [ "r340",        data-hide-global-gpus: true ]
       - [ "genoa",       data-hide-global-gpus: true ]
       - [ "genoa-m",     data-hide-global-gpus: true ]
+      - [ "ai-h100l",    data-hide-global-gpus: true ]
+      - [ "ai-h100l-pu", data-hide-global-gpus: true, data-hide-global-hours: true ]
+      - [ "ai-h200-brc"                              ]
+      - [ "ai-l40s"                                  ]
       - [ "qc-a100"                                  ]
       - [ "qc-h100",     data-hide-global-gpus: true ]
       - [ "qc-gh200",    data-hide-global-gpus: true ]
       - [ "qc-mi210",    data-hide-global-gpus: true ]
       - [ "qc-mi250",    data-hide-global-gpus: true ]
       - [ "qc-pvc",      data-hide-global-gpus: true ]
-      - [ "ai-h100l",    data-hide-global-gpus: true ]
-      - [ "ai-h100l-pu", data-hide-global-gpus: true, data-hide-global-hours: true ]
-      - [ "ai-h200-brc", data-hide-global-gpus: true, data-hide-global-hours: true ]
       - [ "fs-mi300a",   data-hide-global-gpus: true ]
       - [ "fs-mi300x",   data-hide-global-gpus: true ]
-    help: The maximum run times for the ai-h100l-pu or ai-h200-brc are 30 minutes and 8 hours, respectively.
+    help: The run time for the ai-h100l-pu is 30 minutes.
 
   global_queue_x86:
     widget: select
@@ -31,17 +32,18 @@ global_bc_form_items:
       - [ "r340",        data-hide-global-gpus: true ]
       - [ "genoa",       data-hide-global-gpus: true ]
       - [ "genoa-m",     data-hide-global-gpus: true ]
+      - [ "ai-h100l",    data-hide-global-gpus: true ]
+      - [ "ai-h100l-pu", data-hide-global-gpus: true, data-hide-global-hours: true ]
+      - [ "ai-h200-brc"                              ]
+      - [ "ai-l40s"                                  ]
       - [ "qc-a100"                                  ]
       - [ "qc-h100",     data-hide-global-gpus: true ]
       - [ "qc-mi210",    data-hide-global-gpus: true ]
-      - [ "qc-mi250",    data-hide-global-gpus: true ]
       - [ "qc-pvc",      data-hide-global-gpus: true ]
-      - [ "ai-h100l",    data-hide-global-gpus: true ]
-      - [ "ai-h100l-pu", data-hide-global-gpus: true, data-hide-global-hours: true ]
-      - [ "ai-h200-brc", data-hide-global-gpus: true, data-hide-global-hours: true ]
+      - [ "qc-mi250",    data-hide-global-gpus: true ]
       - [ "fs-mi300a",   data-hide-global-gpus: true ]
       - [ "fs-mi300x",   data-hide-global-gpus: true ]
-    help: The maximum run times for the ai-h100l-pu or ai-h200-brc are 30 minutes and 8 hours, respectively.
+    help: The run time for the ai-h100l-pu is 30 minutes.
 
   global_queue_nvidia_x86:
     widget: select
@@ -49,14 +51,13 @@ global_bc_form_items:
     options:
       - [ "a100",        data-hide-global-gpus: true ]
       - [ "r340",        data-hide-global-gpus: true ]
-      - [ "genoa",       data-hide-global-gpus: true ]
-      - [ "genoa-m",     data-hide-global-gpus: true ]
-      - [ "qc-a100"                                  ]
-      - [ "qc-h100",     data-hide-global-gpus: true ]
       - [ "ai-h100l",    data-hide-global-gpus: true ]
       - [ "ai-h100l-pu", data-hide-global-gpus: true, data-hide-global-hours: true ]
-      - [ "ai-h200-brc", data-hide-global-gpus: true, data-hide-global-hours: true ]
-    help: The maximum run times for the ai-h100l-pu or ai-h200-brc are 30 minutes and 8 hours, respectively.
+      - [ "ai-h200-brc"                              ]
+      - [ "ai-l40s"                                  ]
+      - [ "qc-a100"                                  ]
+      - [ "qc-h100",     data-hide-global-gpus: true ]
+    help: The run time for the ai-h100l-pu is 30 minutes.
   
   global_hours:
     widget: "number_field"
